# monad

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  CMakePresets.json  Readme.md  addBasicCoqTutorial.sh  call_trace_compare.py  call_tracer_compare.py  configure.sh  demo.cpp  event_trace_parser.py  notes.txt  parse_log.py  parse_log_async.py  prestate_trace_compare.py  setupMac.sh  syncCoq.sh  syncCpp.sh  updateFmContainer.sh  updateMonadCoqAsts.sh
category/mpt2/: CMakeLists.txt  async_worker.cpp  async_worker.hpp  blocking_spsc.hpp  child_data.cpp  child_data.hpp  compute.cpp  compute.hpp  config.hpp  db.cpp  db.hpp  db_error.hpp  find.cpp  monad_mpt.cpp  nibbles_view.hpp  nibbles_view_fmt.hpp  node.cpp  node.hpp  node_cursor.hpp  ondisk_db_config.hpp  request.hpp  state_machine.hpp  traverse.hpp  traverse_util.hpp  trie.cpp  trie.hpp  update.hpp  update_aux.cpp  util.hpp
category/mpt2/merkle/: compact_encode.hpp  node_reference.hpp
category/mpt2/test/: CMakeLists.txt  merkle_trie_test.cpp  node_test.cpp  test_fixtures.hpp  trie_aux_test.cpp
category/rpc/: CMakeLists.txt  eth_call.cpp  eth_call.h  eth_call_test.cpp
category/rpc/test/: test_eth_call.cpp
category/storage/: CMakeLists.txt  config.hpp  db_storage.cpp  db_storage.hpp  util.cpp  util.hpp
category/storage/detail/: db_metadata.hpp  unsigned_20.hpp
category/storage/test/: CMakeLists.txt  db_storage_test.cpp  test_fixtures.hpp
cmd/: CMakeLists.txt  block_inspector.cpp  eventcap.cpp  events_consumer.cpp  fiber_test.cpp  gen.cpp  mock_consensus.cpp  monad.cpp  monad_cli.cpp  replay_ethereum.cpp  test_run_loop.cpp
cmd/eventcap/: header.cpp
cmd/monad/: event.cpp  event.hpp  file_io.cpp  file_io.hpp  main.cpp  runloop_ethereum.cpp  runloop_ethereum.hpp  runloop_live.cpp  runloop_live.hpp  runloop_monad.cpp  runloop_monad.hpp  runloop_replay.cpp  runloop_replay.hpp  wal.cpp  wal.hpp
cmd/vm/mce/: mce.cpp
cmd/vm/mce/scripts/: analyze-with-mce.sh  compile-smart-contracts.sh  schema.sql  to_csv.py  visualize.html  visualize.js
cmd/vm/mce/src/: operands_logger.cpp  operands_logger.hpp
cmd/vm/parser/: CMakeLists.txt  parser_tool.cpp
evm-op-sem/: dune  dune-project  evm.v  evmfull.v
libs/core/: CMakeLists.txt
libs/core/src/monad/: config.h  config.hpp
libs/core/test/: CMakeLists.txt  async_signal_handling_test.cpp  async_signal_handling_watchdog_test.cpp  backtrace.cpp  cache_bench.cpp  check_c_only.c  clock_test.cpp  cpuset.cpp  event_recorder.cpp  fiber-hello.c  fiber.cpp  fiber_bench.c  fiber_channel.cpp  fiber_semaphore.cpp  future.cpp  lightweight_binary_logger_cli_tool_test.cpp  lightweight_binary_logger_test.cpp  run_queue_test.cpp  shared_memory_allocator_test.cpp  spinlock.cpp
libs/core/toolchains/: gcc-lto.cmake  temp-strip-release.cmake
libs/event/: CMakeLists.txt
libs/event/doc/: event.md
libs/mpt2/: CMakeLists.txt
libs/rpc/: CMakeLists.txt
libs/runloop/: CMakeLists.txt  Doxyfile  Readme.md  cancellation.md
libs/runloop/doc/html/: annotated.html  assert_8h.html  assert_8h__dep__incl.map  assert_8h__dep__incl.md5  assert_8h_source.html  async_2all_8h.html  async_2all_8h__incl.md5  async_2all_8h_source.html  async_2task_8h__dep__incl.map  async_2task_8h__dep__incl.md5  async_2task_8h__incl.map  async_2task_8h__incl.md5  async_2task_8h_source.html  boost__result_8h__dep__incl.map  channel_8h__dep__incl.md5  channel_8h_source.html  config_8h.html  config_8h__incl.map  config_8h_source.html  context_8h.html  context_8h__dep__incl.map  context_8h__incl.md5  context_8h_source.html  context__switcher_8h__incl.md5  cpp__helpers_8hpp.html  current_8h.html  current_8h__dep__incl.map  current_8h__dep__incl.md5  current_8h__incl.md5  dir_53e6865242d5991f90cad99301e95842.html  dir_be5960affa6c37e6690634143faeeb04.html  dir_d44c64559bbebec7f509842c48db8b23.html  executor_8h__dep__incl.map  (+78 more)
libs/runloop/rust/: async.rs  async_raw_bindings.rs  async_test.rs  fiber.rs  task_pool.rs  task_pool_test.rs  test.rs
libs/triedb-driver/: CMakeLists.txt
libs/triedb-driver/rust/: monad_triedb_driver.rs  monad_triedb_driver_raw_bindings.rs  monad_triedb_driver_test.rs
monadproofs/: dune  dune-project  setupDockerArm.sh
monadproofs/EVMOpSem/: block.v
monadproofs/proofs/: atomic_specs.v  demo.cpp  demo2.cpp  demo2prf.v  demo2prfb.v  demo3.cpp  demomisc.v  demoprf.v  dra.v  dune-gen.sh  dune.inc  evmopsem.v  exec_specs.v  execute_transaction_spec.v  ext_flags.sh  libspecs.v  misc.v  stsg.v
monadproofs/proofs/execproofs/: .#exec_transactions.v  compute_senders.v  exec_transaction.v  exec_transactions.v
monadproofs/tutorials/: atomic_specs.v  demo2.cpp  demo2prf.v  demo3.cpp  demo3prf.v  demo3prf2.v  demomisc.v  demoprf.v
test/: CMakeLists.txt  fcontext.c  fiber.cpp  scheduler.cpp
test/async/: context_switcher.cpp  executor.cpp  fcontext.cpp  file_io.cpp  monad_fiber.cpp  socket_io.cpp  work_dispatcher.cpp
test/common/checkpoint/: accounts  code  storage
test/ethereum_test/: CMakeLists.txt
test/ethereum_test/exclude/: berlin.cmake  byzantium.cmake  cancun.cmake  constantinoplefix.cmake  eip150.cmake  eip158.cmake  frontier.cmake  homestead.cmake  istanbul.cmake  london.cmake  merge.cmake  shanghai.cmake
test/ethereum_test/include/: blockchain_test.hpp  ethereum_test.hpp  transaction_test.hpp
test/ethereum_test/src/: blockchain_test.cpp  ethereum_test.cpp  main.cpp  transaction_test.cpp
test/fiber/: CMakeLists.txt  current.cpp  fcontext.cpp  fiber.cpp  scheduler.cpp  task.cpp
test/unit/common/: CMakeLists.txt
test/vm/: CMakeLists.txt
test/vm/fuzzer/: CMakeLists.txt  assertions.cpp  assertions.hpp  compiler_hook.hpp  fuzzer.cpp  state_predicates.cpp  state_predicates.hpp  typechecker_fuzzer.cpp
test/vm/unit/: CMakeLists.txt  emitter_tests.cpp  evm_fixture.cpp  main.cpp  test_params.cpp  test_params.hpp
test/vm/untyped_ir_interpreter/: CMakeLists.txt  debug.hpp  execute.cpp  execute.hpp  instruction_table.hpp  instructions_fwd.hpp  intercode_untyped_ir.cpp  intercode_untyped_ir.hpp  push.hpp  types.hpp
test/vm/vm/: CMakeLists.txt  test_vm.cpp  test_vm.hpp
(+1281 files in other folders)
