(include_subdirs qualified)
(coq.theory
 (name EVMOpSem)                   ; This will determine the top-level Coq
                                   ; module of your theory, modules will
                                   ; be MyPlugin.A, etc., when seen from the
                                   ; outside.

; (package coq-evm-opsem)           ; Adding this line will make your
                                   ; library installable in the opam package
 (theories stdpp elpi elpi_elpi)) ; the last one (elpi_elpi) is a hack to solve solme build issues

; Other important fields are `modules` and `flags`, see Dune
; documentation for more details.
