(include_subdirs qualified)
(coq.theory
 (name monad) ; logical path of this library
 (theories
  Lens Lens.Elpi Equations Equations.Prop Equations.Type
  bedrock iris stdpp elpi ExtLib Ltac2 AAC_tactics))

(subdir proofs
 (rule
  (targets demo.v)
  (alias test_ast)
  (deps (:input demo.cpp))
  (action
   (run cpp2v -v %{input}  --no-elaborate -o demo.v -- -stdlib=libc++)))
 (alias (name srcs) (deps demo.cpp))
)

(subdir proofs
 (rule
  (targets demo2.v)
  (alias test_ast)
  (deps (:input demo2.cpp))
  (action
   (run cpp2v -v %{input}  --no-elaborate -o demo2.v -- -stdlib=libc++)))
 (alias (name srcs) (deps demo2.cpp))
)
