(lang dune 3.8)
(using coq 0.8)
(name monad)

(maintainers
 "Abhishek Anand <abhishek@category.xyz>")
(source (github category-labs/monad))

(package
 (name monad)
 (synopsis "correctness proofs of category lab's implementation of the monad virtual machine")
 (depends
  (coq-cpp2v (= dev))
  elpi-cpp
  coq-bluerock-auto-core))
